# cookiecutter-rustderivemacro

./: README.md  cookiecutter.json  requirements.txt
.github/workflows/: CI.yml
{{cookiecutter.project_slug}}/: Cargo.toml  Makefile  README.md
{{cookiecutter.project_slug}}/.github/workflows/: CI.yml  gh_pages.yml
{{cookiecutter.project_slug}}/src/: lib.rs  main.rs  prelude.rs
{{cookiecutter.project_slug}}/src/tests/: test_build.rs
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}_macros/: Cargo.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}_macros/src/: func.rs  lib.rs
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}_types/: Cargo.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}_types/src/: errors.rs  lib.rs
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}_types/src/structs/: mod.rs
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}_types/src/traits/: mod.rs  {{cookiecutter.project_slug}}.rs
