[package]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "{{cookiecutter.project_slug}}"
path = "src/main.rs"

[lib]
name = "{{cookiecutter.project_slug}}"

[dependencies]
{{cookiecutter.project_slug}}_types = { version = "0", path = "{{cookiecutter.project_slug}}_types", default-features = true, optional = false }
{{cookiecutter.project_slug}}_macros = { version = "0", path = "{{cookiecutter.project_slug}}_macros", default-features = true, optional = false }

[workspace]
members = [ "{{cookiecutter.project_slug}}_macros", "{{cookiecutter.project_slug}}_types" ]